@startuml
'https://plantuml.com/class-diagram
left to right direction
class ApiSearch {
  -ns : Int
  -title : String
  -pageid : Int
  -size : Int
  -wordcount : Int
  -snippet : String
  -timestamp : String
}

class ApiResult {
  -query : ApiQuery
}

class ApiQuery {
  -search : List<ApiSearch>
}

ApiQuery --> ApiSearch : contains
ApiResult --> ApiQuery : contains

@enduml